api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: modular-express
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
    - name: http
      port: 80
      targetPort: 8080
