mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: modular-express
spec:
  clusterIP: None
  selector:
    app: mysql
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
