redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: modular-express
spec:
  clusterIP: None
  selector:
    app: redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
