web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: modular-express
spec:
  type: ClusterIP
  selector:
    app: web
  ports:
    - name: http
      port: 80
      targetPort: 80
